IE full width map fixed. Improving map legend layout on mobile.

--- a/site/app/styles/app.scss
+++ b/site/app/styles/app.scss
@@ -75,7 +75,7 @@ $notcalculated-grey: #eaeaea;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 100% !important;
+    max-width: 100%;
 }
 
 .spaced-row {
@@ -260,6 +260,8 @@ $notcalculated-grey: #eaeaea;
         font-size: 80%;
         line-height: 1;
         padding-bottom: 0.425rem;
+        span { 
+            white-space: nowrap;}
         em {
             font-family: 'PT Sans', 'DejaVu Sans', Roboto, Arial, sans-serif;
             font-style: normal;
@@ -315,6 +317,14 @@ $notcalculated-grey: #eaeaea;
             }
         }
 }
+
+/* Share Modal dialog
+*/
+
+#shareModal {
+  p i { font-size: 2.25rem; }
+}
+
 
 /* Country page
 */
